Include stage-0 for es6. Add Google Analytics w/ privacy policy. CSS fix
Fixed closing component button being too small. Also updated packages.

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -102,6 +102,7 @@ i.closeBtn {
   cursor: pointer;
   padding: 0;
   color: $SCUred;
+  font-size: 1.75rem;
   &:hover {
     color: $SCUdarkred;
   }
